--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.13.2",
-    "express": "^5.2.1"
+    "eslint": "^9.39.2",
+    "express": "^5.2.1",
+    "node-fetch": "^3.3.2"
   }
 }
